Optix corrupt render (incomplete scene translated) #81431

Closed
opened 2020-10-04 14:12:21 +02:00 by Juan Gea · 11 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-02 22:11, hash: 743eca0f31

Short description of error
A scene with an Alembic with 10 million vertices using DupliVerts (Instancing - Vertices) to generate the result is rendering incorrectly with Optix while it works fine with CUDA.

Exact steps for others to reproduce the error
0.- Download the .blend and the corresponding Alembic file (300Mb) (if you have any problem downloading it, please tell me and I'll send it over with wetransfer or any other system you may prefer).

https://1drv.ms/u/s!AlC82JdQ66jggZVFjXFRGF7L1aDyjw?e=ozzhf9

1.- Open the attached .blend
2.- redirect the Alembic file so it loads the file you just downloaded, the object with the alembic modifier is "StormPoints", don't unhide it unless you disable the vertices option in the instancing section of the object data, just because your viewport will become a bit sluggish
3.- Ensure you have CUDA as render device on your system
4.- Render the scene, you will see the correct result, similar to this picture

image.png

5.- Change your render device to OPTIX
6.- Render the scene, it consumes more memory, it's also faster but you will see the same crippled result as in this picture

image.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-02 22:11, hash: `743eca0f31` **Short description of error** A scene with an Alembic with 10 million vertices using DupliVerts (Instancing - Vertices) to generate the result is rendering incorrectly with Optix while it works fine with CUDA. **Exact steps for others to reproduce the error** 0.- Download the .blend and the corresponding Alembic file (300Mb) (if you have any problem downloading it, please tell me and I'll send it over with wetransfer or any other system you may prefer). https://1drv.ms/u/s!AlC82JdQ66jggZVFjXFRGF7L1aDyjw?e=ozzhf9 1.- Open the attached .blend 2.- redirect the Alembic file so it loads the file you just downloaded, the object with the alembic modifier is "StormPoints", **don't unhide it unless you disable the vertices option in the instancing section of the object data**, just because your viewport will become a bit sluggish 3.- Ensure you have CUDA as render device on your system 4.- Render the scene, you will see the correct result, similar to this picture ![image.png](https://archive.blender.org/developer/F8954267/image.png) 5.- Change your render device to OPTIX 6.- Render the scene, it consumes more memory, it's also faster but you will see the same crippled result as in this picture ![image.png](https://archive.blender.org/developer/F8954270/image.png)
Author

Added subscriber: @juang3d

Added subscriber: @juang3d
Member

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Patrick Mours self-assigned this 2021-01-07 18:38:39 +01:00
Member

This is happening because the current OptiX implementation in Blender only supports up to 8'388'607 instances, but this scene is using 10'012'160, which is why things fall apart for those instances that go beyond the limit.
It is technically possible to raise that limit to 134'217'727 now though, which solves the problem in this scene. I'll commit that later to fix it.

This is happening because the current OptiX implementation in Blender only supports up to 8'388'607 instances, but this scene is using 10'012'160, which is why things fall apart for those instances that go beyond the limit. It is technically possible to raise that limit to 134'217'727 now though, which solves the problem in this scene. I'll commit that later to fix it.

This issue was referenced by d259e7dcfb

This issue was referenced by d259e7dcfbbd37cec5a45fdfb554f24de10d0268
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

@brecht Raising the instance limit to 134'217'727 requires building with the OptiX 7.1 SDK or higher, otherwise it continues to be capped at 8'388'607. It looks like buildbot is currently building with the OptiX 7.0 SDK still, so could be worth updating that now to support this.

@brecht Raising the instance limit to 134'217'727 requires building with the OptiX 7.1 SDK or higher, otherwise it continues to be capped at 8'388'607. It looks like buildbot is currently building with the OptiX 7.0 SDK still, so could be worth updating that now to support this.

@pmoursnv, I can do the upgrade to 7.1. I guess this will also enable the new curve primitive automatically?

There are also useful features in 7.2. But I guess we wait to upgrade to that until we implement support for them, so that users don't need the very latest driver?

@pmoursnv, I can do the upgrade to 7.1. I guess this will also enable the new curve primitive automatically? There are also useful features in 7.2. But I guess we wait to upgrade to that until we implement support for them, so that users don't need the very latest driver?
Member

Yeah, I think it is better to go with 7.1 for now for increased compatibility with older drivers. It will indeed also activate support for the built-in curve primitive too, but that's still disabled by default and only enabled via a debug option, so does not change for the normal user.
There is currently no 7.2-specific feature implemented (apart from enabling validation mode when building debug kernels), so we wouldn't gain much updating all the way. I've played around with the new specialization feature, but couldn't really get useful performance benefits for Cycles out of it, so didn't add it. Maybe that changes at some point.

Yeah, I think it is better to go with 7.1 for now for increased compatibility with older drivers. It will indeed also activate support for the built-in curve primitive too, but that's still disabled by default and only enabled via a debug option, so does not change for the normal user. There is currently no 7.2-specific feature implemented (apart from enabling validation mode when building debug kernels), so we wouldn't gain much updating all the way. I've played around with the new specialization feature, but couldn't really get useful performance benefits for Cycles out of it, so didn't add it. Maybe that changes at some point.

This issue was referenced by 1dc9650d20

This issue was referenced by 1dc9650d20336a2a6058eaae568a5bca71650423

The buildbot is now using OptiX SDK 7.1 for Blender 2.92.

For 2.83 LTS and a potential 2.91.1 we still use 7.0.

The buildbot is now using OptiX SDK 7.1 for Blender 2.92. For 2.83 LTS and a potential 2.91.1 we still use 7.0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81431
No description provided.